add: pseudo adaptive for mobile version

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -181,6 +181,12 @@ h1 {
   overflow: hidden;
 }
 
+@media (max-width: 767px) {
+  .board {
+    width: 90%;
+  }
+}
+
 .circle {
   /* background: linear-gradient(90deg, #16d9e3 0%, #30c7ec 47%, #46aef7 100%); */
   position: absolute;
